<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/rl_top"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:background="@color/tab_blue">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/iv_back"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/iv_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_finish"/>
        </com.zhy.autolayout.AutoRelativeLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:lines="1"
            android:textSize="18sp"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelAlwaysShown="true"
            app:met_floatingLabelText="@string/str_title"
            app:met_floatingLabelTextColor="?attr/colorPrimary"
            app:met_helperText="@string/help_title"
            app:met_maxCharacters="25"
            app:met_primaryColor="?attr/colorPrimary"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelAlwaysShown="true"
            app:met_floatingLabelText="@string/str_content"
            app:met_floatingLabelTextColor="?attr/colorPrimary"
            app:met_hideUnderline="true"
            app:met_primaryColor="?attr/colorPrimary"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:gravity="end"
            android:textColor="@color/gray"
            android:textSize="14sp"
            tools:text="2017.8.26 15:46"/>
    </LinearLayout>
</ScrollView>