<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                     xmlns:tools="http://schemas.android.com/tools"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:orientation="vertical"
                                     android:background="@color/white"
                                     >

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:scrollbars="none"/>


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="160px"
        android:layout_marginTop="1px"
        android:background="@color/tab_gray"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/ll_doc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.shen.mymvparm.mvp.ui.widget.GradientIconView
                android:id="@+id/giv_doc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bottom_icon="@drawable/docker_tab_doc_normal"
                app:top_icon="@drawable/docker_tab_doc_selected"/>

            <com.shen.mymvparm.mvp.ui.widget.GradientTextView
                android:id="@+id/gtv_doc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bottom_text_color="@color/gray"
                app:text="@string/tab_doc"
                app:text_size="12sp"
                app:top_text_color="@color/tab_blue"/>

        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/ll_corp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

                <com.shen.mymvparm.mvp.ui.widget.GradientIconView
                    android:id="@+id/giv_corp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:bottom_icon="@drawable/docker_tab_corp_normal"
                    app:top_icon="@drawable/docker_tab_corp_selected"/>

                <com.shen.mymvparm.mvp.ui.widget.GradientTextView
                    android:id="@+id/gtv_corp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:bottom_text_color="@color/gray"
                    app:text="@string/tab_corp"
                    app:text_size="12sp"
                    app:top_text_color="@color/tab_blue"/>


            </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/ll_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.shen.mymvparm.mvp.ui.widget.GradientIconView
                android:id="@+id/giv_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bottom_icon="@drawable/docker_tab_mine_normal"
                app:top_icon="@drawable/docker_tab_mine_selected"/>

            <com.shen.mymvparm.mvp.ui.widget.GradientTextView
                android:id="@+id/gtv_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bottom_text_color="@color/gray"
                app:text="@string/tab_my"
                app:text_size="12sp"
                app:top_text_color="@color/tab_blue"/>
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>